ingress-hub.yaml
---
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  name: "hub"
  namespace: "aap-op"
spec:
  defaultBackend:
    service:
      name: "automation-hub-external-svc"
      port:
        number: 8080
